feat: Refactor renderers to use constant keys for document attributes and improve logging